@@ -5,4 +5,5 @@ Prototype: G
 Help: serlaplace(x): replaces the power series sum of a_n*x^n/n! by sum of
  a_n*x^n. For the reverse operation, use serconvol(x,exp(X)).
 Doc: $x$ must be a power series with non-negative
- exponents. If $x=\sum (a_k/k!)*X^k$ then the result is $\sum a_k*X^k$.
+ exponents or a polynomial. If $x=\sum (a_k/k!)*X^k$ then the result is $\sum
+ a_k*X^k$.
