@@ -35,4 +35,6 @@ x^2 + 1
   ***   at top-level: Pol("")
   ***                 ^-------
   *** Pol: incorrect type in gtopoly (t_STR).
+2*x^2 + x + 1
+6*x^3 + 2*x^2
 Total time spent: 0
