@@ -22,3 +22,5 @@ norm(I*x+1)
 trace(I*x+1)
 matcompanion(2*x^2+1)
 Pol("")
+serlaplace(1+x+x^2)
+serlaplace(x^2+x^3)
